--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,13 +76,15 @@ flutter:
   # example:
   fonts:
     - family: ElMessiri
+
       fonts:
         - asset: fonts/ElMessiri-SemiBold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: DTHULUTH
+
+       fonts
+         - asset fonts/DTHULUTH.TTF
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
